--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "11.8.2",
+    "@emotion/styled": "11.8.1",
     "@fortawesome/fontawesome-svg-core": "6.1.1",
     "@fortawesome/free-regular-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@fortawesome/react-fontawesome": "0.1.18",
+    "@mui/icons-material": "5.5.1",
+    "@mui/material": "5.5.3",
     "framer-motion": "4.1.17",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-scripts": "3.0.1"
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
+    "react-scripts": "4.0.0"
   },
   "devDependencies": {
     "typescript": "3.8.3"
